Fixing color not showing error

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-light_mode_body{
+.light_mode_body{
     background-color: #BCC0E7;
 }
 
